# ai-talker-api

./: .env  .env.dev-ext  .env.sample  .env.test  .gitignore  Cargo.toml  LICENSE  README.md  keycloak_container.sh  pgsql_container.sh  test_data.sql
.github/: copilot-instructions.md  unit-test-instructions.md
migrate_pg17_to_pg18/: migrate_pg17_to_pg18.sh
migrations/: 20250410152814_create_aitalker_user_table.sql  20250410152814_create_user_table.sql  20250621000000_create_pjsip_realtime_account_table.sql  20250622220000_create_enums.sql  README.md
setup/: 20250410150000_create_database_users.sql  run_setup.sh
simple-test/: api_v1_pjsip_realtime_create.sh  api_v1_pjsip_realtime_create_with_id.sh  api_v1_pjsip_realtime_delete.sh  api_v1_pjsip_realtime_udp_create.sh  api_v1_pjsip_realtime_udp_create_with_id.sh  api_v1_pjsip_realtime_udp_delete.sh  api_v1_pjsip_realtime_ws_create_with_id.sh  api_v1_pjsip_realtime_ws_delete.sh
src/: main.rs  tests.rs
src/application/: repository.rs
src/application/repository/: mod.rs  pjsip_realtime.rs
src/handlers/: pjsip_realtime_handler.rs
src/infrastructure/: models.rs  repository.rs
src/infrastructure/models/: errors.rs  mod.rs  pjsip_realtime.rs
src/infrastructure/models/errors/: deletion_error.rs  mod.rs  registration_error.rs
src/infrastructure/models/pjsip_realtime/: account.rs  mod.rs  sip_udp.rs  sip_ws.rs
src/infrastructure/repository/: mod.rs  pjsip_realtime_repository.rs
src/restapi/: handlers.rs  routes.rs
src/restapi/handlers/: heart_beat_handler.rs  mod.rs  pjsip_realtime_handler.rs
src/restapi/routes/: heart_beat_router.rs  mod.rs  pjsip_realtime_router.rs  root.rs
src/routes/: mod.rs  pjsip_realtime_router.rs
src/test/: api_v1_pjsip_realtime_create.sh  api_v1_pjsip_realtime_delete.sh
src/tests/: serialization_test.rs
src/tests/restapi/api/: v1.rs
(+13 files in other folders)
