[package]
name = "ai-talker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# API Framework
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "postgres", "mysql", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.45.1", features = ["full"] }
ulid = "1.2.1"

# --- environment ---
dotenvy = "0.15.7"
chrono = "0.4.41"
serde_json = "1.0.140"
