[package]
name = "ai-talker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# API Framework
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
ulid = "1.2.1"

# --- environment ---
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[dev-dependencies]
# --- unit test ---
http-body-util = "0.1.3"
serial_test = "*"
