[package]
name = "ai-talker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# API Framework
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
ulid = "1.2.1"

# --- environment ---
dotenvy = "0.15.7"
chrono = { version = "0.4.43", features = ["serde"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

[dev-dependencies]
# --- unit test ---
http-body-util = "0.1.3"
serial_test = "3.3"
